--- a/package.json
+++ b/package.json
@@ -3,12 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/compat-data": "7.8.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
+    "babel-loader": "^8.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "eslint-config-react-app": "^5.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.0"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1"
+  },
+  "resolutions": {
+    "@babel/preset-env": "7.8.7"
   },
   "scripts": {
     "start": "react-scripts start",
